# rowgobrrr

./: .gitignore  Cargo.toml  NOTES.md  PLAN.md  README.md  readme.md
.cargo/: config.toml
data/: measurements.txt
src/: core.rs  lib.rs  main.rs  memchr.rs  metrics.rs  mmap.rs  table.rs
