[package]
name = "beecrab"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = false
rpath = false

[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
lto = "off"

[dependencies]
hashbrown = "0.17.0"
libc = "0.2.185"
